Fixed some overlapping issues

--- a/weather.css
+++ b/weather.css
@@ -89,30 +89,37 @@ h1{
 }
 #search-box{
     width:100%;
-    height: auto;
+    height: 60px;
     font-size: 1rem;
     display: flex;
     justify-content: center;
+    margin-top:20px;
 }
 #search-box input{
-    height:5vh;
-    font-size: 1rem;
+    height:45px;
+    font-size: 1.2rem;
+    padding:10px;
 }
 button{
-    height:5vh;
-    font-size: 2rem;
-    padding: 0%;
+    height:45px;
+    font-size: 1.2rem;
+    padding: 0 15px;
 }
 i{
-    margin: 10px;
+    margin: 0;
 }
 .temp{
     font-size: 3rem;
     padding-top: 10px;
 }
+.svg{
+    height: auto;
+    margin-top:20px;
+}
 svg{
-    height:auto;
-    padding-left: 20px;
+    height:150px;
+    width:auto;
+    padding-left: 0px;
 
 } 
 }
